code refactors and new config options